--- a/app/src/main/res/layout/ver_product_card.xml
+++ b/app/src/main/res/layout/ver_product_card.xml
@@ -16,7 +16,7 @@
             android:id="@+id/product_image"
             android:layout_width="match_parent"
             android:layout_height="@dimen/ver_product_card_image_height"
-            android:background="?attr/colorPrimaryDark"
+            android:background="@android:color/holo_green_light"
             android:scaleType="centerCrop" />
 
         <LinearLayout
@@ -29,14 +29,14 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ver_product_title"
+                android:text="@string/ver_device_title"
                 android:textAppearance="?attr/textAppearanceHeadline6" />
 
             <TextView
                 android:id="@+id/product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ver_product_description"
+                android:text="@string/ver_device_description"
                 android:textAppearance="?attr/textAppearanceBody2" />
         </LinearLayout>
     </LinearLayout>
