--- a/app/src/main/res/layout/ver_product_grid_fragment.xml
+++ b/app/src/main/res/layout/ver_product_grid_fragment.xml
@@ -15,8 +15,25 @@
             style="@style/Widget.Shrine.Toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:background="@android:color/holo_green_light"
             app:navigationIcon="@drawable/ver_menu"
             app:title="@string/ver_app_name" />
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp"
+        android:background="@color/productGridBackgroundColor"
+        android:paddingStart="@dimen/ver_product_grid_spacing"
+        android:paddingEnd="@dimen/ver_product_grid_spacing"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </android.support.v4.widget.NestedScrollView>
 
 </FrameLayout>
