--- a/app/src/main/res/layout/ver_staggered_setup_card_third.xml
+++ b/app/src/main/res/layout/ver_staggered_setup_card_third.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/ver_staggered_product_grid_card_width_portrait"
     android:layout_height="match_parent"
     app:cardBackgroundColor="@android:color/transparent"
     app:cardElevation="0dp"
     app:cardPreventCornerOverlap="true"
-    app:contentPaddingTop="@dimen/ver_staggered_product_grid_margin_top_first">
+    app:contentPaddingTop="@dimen/ver_staggered_product_grid_margin_top_third">
 
     <!-- Product card layout used in MDC-103 and onward -->
     <LinearLayout
-        android:layout_width="@dimen/ver_staggered_product_grid_card_width_landscape"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/ver_staggered_product_grid_spacing_small"
-        android:layout_marginLeft="@dimen/ver_staggered_product_grid_spacing_small"
         android:orientation="vertical">
 
         <com.android.volley.toolbox.NetworkImageView
             android:id="@+id/product_image"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/ver_staggered_product_grid_card_height_landscape"
+            android:layout_height="@dimen/ver_staggered_product_grid_card_height_portrait"
             android:background="?attr/colorPrimaryDark"
             android:scaleType="centerCrop" />
 
@@ -33,7 +31,7 @@
                 android:id="@+id/product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ver_product_title"
+                android:text="@string/ver_device_title"
                 android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceSubtitle2" />
 
@@ -41,7 +39,7 @@
                 android:id="@+id/product_price"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/ver_product_description"
+                android:text="@string/ver_device_description"
                 android:textAlignment="center"
                 android:textAppearance="?attr/textAppearanceBody2" />
         </LinearLayout>
