--- a/app/src/main/res/layout/ver_product_card.xml
+++ b/app/src/main/res/layout/ver_product_card.xml
@@ -8,6 +8,7 @@
     app:cardPreventCornerOverlap="true">
 
     <LinearLayout
+        android:id="@+id/ll_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
