--- a/app/src/main/res/menu/ver_toolbar_menu.xml
+++ b/app/src/main/res/menu/ver_toolbar_menu.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/search"
@@ -11,4 +12,5 @@
         android:icon="@android:drawable/ic_lock_power_off"
         android:title="@string/ver_logout_title"
         app:showAsAction="always" />
+
 </menu>
