--- a/app/src/main/res/layout/ver_backdrop.xml
+++ b/app/src/main/res/layout/ver_backdrop.xml
@@ -2,24 +2,28 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <android.support.design.button.MaterialButton
+        android:id="@+id/device_Button"
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ver_device_title" />
 
     <android.support.design.button.MaterialButton
+        android:id="@+id/store_Button"
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ver_store_title" />
 
     <android.support.design.button.MaterialButton
+        android:id="@+id/setup_Button"
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ver_setup_title" />
 
     <android.support.design.button.MaterialButton
+        android:id="@+id/logout_Button"
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -32,6 +36,7 @@
         android:background="?android:attr/textColorPrimary" />
 
     <android.support.design.button.MaterialButton
+        android:id="@+id/account_Button"
         style="@style/Widget.Shrine.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
